# light-painting

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  canvas.c  docker-compose.yaml  fft.c  inmp441_pio.c  main.c  program.c  rgb_status.c  rgb_status.h  status.h  swapchain.c  ws2812_pio.c
audio/: CMakeLists.txt  audio.c  audio.h
basic/: CMakeLists.txt  canvas.c  canvas.h  driver.c  driver.h  program.c  status.c  status.h
blinky/: CMakeLists.txt  program.c
buffer/: buffer.h
canvas/: CMakeLists.txt  canvas.c  canvas.h
common/: CMakeLists.txt  types.h
common/buffer/: CMakeLists.txt  buffer.c
components/: CMakeLists.txt
components/canvas/: CMakeLists.txt  canvas.c
components/status/: CMakeLists.txt
components/swapchain/: CMakeLists.txt
components/visualization/: CMakeLists.txt  visualization.c  visualization.h
drivers/: CMakeLists.txt
drivers/i2s/: .gitignore  CMakeLists.txt  i2s.c  i2s.h  i2s.pio
drivers/inmp441/: .gitignore  CMakeLists.txt  inmp441.c  inmp441.h  inmp441.pio  inmp441.pio.h
drivers/neopixel/: CMakeLists.txt  neopixel.c  neopixel.h  neopixel.pio
drivers/ws2812/: .gitignore  CMakeLists.txt  ws2812.c  ws2812.h
fft/: CMakeLists.txt  fft.c  fft.h
include/: canvas.h  fft.h  inmp441_pio.h  status.h  swapchain.h  types.h  utils.h  ws2812_pio.h  ws2812_spi.h
include/components/: buffer.h  swapchain.h  visualization.h
include/drivers/: inmp441_pio.h  ws2812_pio.h
include/pio/: i2s_driver.pio.h  inmp441_driver.pio.h  ws2812_driver.pio.h
inmp441_pio/: CMakeLists.txt  buffer.c  buffer.h  driver.c  driver.h  inmp441_driver.pio  inmp441_driver_alt.pio  inmp441_driver_alt2.pio  swapchain.h
inmp441_pio/pio/: inmp441_driver.pio.h  inmp441_driver_alt.pio.h
pio/: i2s_driver.pio  inmp441_driver.pio  ws2812_driver.pio  ws2812_driver_alt.pio
source/: canvas.c  inmp441_pio.c  main.c  program.c  status.c  swapchain.c  ws2812_pio.c
source/components/: buffer.c  canvas.c  fft.c  status.c  swapchain.c  visualization.c
source/drivers/: i2s_mono.pio  inmp441_pio.c  ws2812_pio.c
source/pio/: i2s_driver.pio
status/: CMakeLists.txt  status.c  status.h
swapchain/: CMakeLists.txt  swapchain.c  swapchain.h
tests/: swapchain.test.c
util/: CMakeLists.txt  alloc.h  async.h  color.h
visualization/: CMakeLists.txt  visualization.c  visualization.h
ws2812_pio/: CMakeLists.txt  driver.c  driver.h  ws2812_driver.pio  ws2812_driver_alt.pio
ws2812_pio/pio/: ws2812_driver.pio.h
ws2812_spi/: CMakeLists.txt  driver.c  driver.h
